--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulpachek-cpp",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Higher level C++ tools built on gulpachek",
   "main": "lib/index.js",
   "scripts": {
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/gulachek/gulpachek-cpp#readme",
   "dependencies": {
-    "gulpachek": "^0.1.0"
+    "commander": "^9.4.1",
+    "gulpachek": "^0.1.1",
+    "semver": "^7.3.8"
   }
 }
